deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: focusflow-app-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: focusflow-app
