deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: focusflow-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: focusflow.localhost  # You can access this in your browser
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: focusflow-service
            port:
              number: 80
